<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.nargila.robostroke</groupId>
  <artifactId>robostroke-top</artifactId>
  <version>0.9.6-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>robostroke-top</name>
  <url>http://nargila.org/trac/robostroke</url>
  
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.21</slf4j.version>
    <target.api.level>34</target.api.level>
  </properties>

  <modules>
    <module>common</module>
    <module>swing</module>
    <module>android</module>
  </modules>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.0</version>
          <configuration>
            <source>8</source>
            <target>8</target>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>2.6</version>
          <configuration>
            <encoding>UTF-8</encoding>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.1.1</version>
          <configuration>
            <environmentVariables>
              <LANG>en_US</LANG>
            </environmentVariables>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>install-android-jar</id>
            <goals>
              <goal>exec</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
        <configuration>
          <executable>mvn</executable>
          <inheritIo>true</inheritIo>
          <arguments>
            <argument>install:install-file</argument>
            <argument>-Dfile=${android.sdk.path}/platforms/android-${target.api.level}/android.jar</argument>
            <argument>-DgroupId=org.nargila.android</argument>
            <argument>-DartifactId=android</argument>
            <argument>-Dversion=1.0.${target.api.level}</argument>
            <argument>-Dpackaging=jar</argument>
            <argument>-DgeneratePom=true</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>
  </dependencies>
</project>
